# hab

./: .gitignore  README.md  server.py
dashboard/server/: config.py  launch.sh  main.py  models.py  packet_rx.py  receiver_manager.py  requirements.txt
dashboard/sim/: README.md  run.sh  sim.py
dashboard/web/: index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  REDESIGN_PLAN.md
gui/python/: README.md  connection_tab.py  dashboard_tab.py  dvbs2_tx_worker.py  launch.sh  requirements.txt  test_engine.py  test_ota.sh
hab-esp32/: README.md
hab-gui/: README.md  README_DVBS2.md  REFACTORING_SUMMARY.md  SPECTRUM_ANALYZER.md  connection_tab.py  dvbs2_flowgraph.py  dvbs2_tx_tab.py  main.py  requirements.txt  telemetry_tab.py
hab-gui/python/: README.md  connection_tab.py  dashboard_tab.py  dvbs2_flowgraph.py  dvbs2_tx_tab.py  launch.sh  main.py  telemetry_rx.py  telemetry_tab.py  test_engine.py  test_ota.sh
hardware/hab-devboard/: devboard.kicad_pcb  devboard.kicad_sch  export.csv
pcb/: 105mmHeater.dxf  Power_Amplifier.dxf
pcb/hab-devboard/: Keepout.dxf  devboard.bomhelper  (+9 more)
receiver-server/: config.py  launch.sh  main.py  models.py  packet_rx.py  receiver_manager.py  requirements.txt  ws_manager.py
rf/: .gitignore  setup_env.sh
rf-link/: .gitignore  README.md  README.txt  Untitled.rtf  dvbs2-rx-mod  dvbs2-tx-mod  dvbs2_tx.grc  dvbs2_tx.py  requirements.txt  setup_env.sh  soapy-tx.py  videotx_example.grc
rf-link/gr-dvbs2rx/lib/ldpc_decoder/: CMakeLists.txt
web-dashboard/: .env  README.md  package-lock.json  package.json  tailwind.config.js
(+242 files in other folders)
